--- a/AuthBlazor/Components/Pages/Account/Logout.razor
+++ b/AuthBlazor/Components/Pages/Account/Logout.razor
@@ -1,12 +1,12 @@
 @page "/logout"
 @using Microsoft.AspNetCore.Authentication
-
+@attribute [ExcludeFromInteractiveRouting]
 @inject NavigationManager NavigationManager
 
 <h3>Logout</h3>
 
 @code {
-   [CascadingParameter] public HttpContext HttpContext { get; set; }
+   [CascadingParameter] public HttpContext? HttpContext { get; set; }
 
    protected override async Task OnInitializedAsync()
    {
@@ -16,7 +16,5 @@
          await HttpContext.SignOutAsync();
          NavigationManager.NavigateTo("/logout", true);
       }
-      
    }
-
 }
